--- a/css/nav.css
+++ b/css/nav.css
@@ -165,21 +165,31 @@ color: #fff;
 .share-social{
   display: flex;
 }
-.share-social a img:nth-child(1){
-  width: 50px;
-  height: 30px;
+
+.share-social a i{
+  font-size: 35px;
+  margin-left: 10px;
 }
-.share-social a img:nth-child(2){
-  width: 30px;
-  height: 30px;
+.share-form{
+  margin-top: 10px;
+  margin-bottom: 20px;
 }
-.share-social a img:nth-child(3){
-  width: 50px;
-  height: 50px;
+.share-form input {
+  width: 90%;
+  
+  height: 37px;
+  background-color: #c0c0c0;
+  padding: 0px 10px;
  
-}
-.share-social a img:nth-child(5){
-  width: 30px !important;
-  height: 50px;
+  list-style-type: none;
  
+  outline: none;
+  border: none;
+}
+.share-form label {
+  font-size: 15px;
+padding: 8px 15px 8px 15px;
+color: #fff;
+background-color: #474747;
+margin-left: -10px;
 }
