--- a/css/style.css
+++ b/css/style.css
@@ -1,122 +1,161 @@
 /* boook section//////////// */
 
 
+*{
+	padding: 0;
+	margin: 0;
+	font-family: sans-serif;
+}
 
+.containera, .book-content{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.containera{
+	width: 100%;
+	height: 100vh;
+	
+}
+.book-content{
+	width: 100%;
+    width: 600px;
+	height: 430px;
+	position: relative;
+	perspective: 1000px;
+	transition: 1s;
+}
+.book{
+	position: absolute;
+    
+	width: 65%;
+	height: 100%;
+	transition: 1s;
+	transform-style: preserve-3d;
+	transform-origin: left; 
+}
+.face-front{
+	width: 100%;
+	height: 100%;
+	background: white;
+	padding: 15px;
+	box-sizing: border-box;
+	overflow: hidden;
+}
+.face-back{
+	width: 100%;
+	height: 100%;
+	background: white;
+	padding: 15px;
+	box-sizing: border-box;
+	overflow: hidden;
+}
+
+
+.face-front{
+	box-shadow: inset 3px 0px 20px -7px black;
+	border-top-left-radius: 3px;
+	border-bottom-left-radius: 3px;
+}
+.face-back{
+	position: absolute;
+	top: 0;
+	left: 0;
+	transform: translateZ(-1px) rotateY(180deg);
+	box-shadow: inset -3px 1px 20px -7px black;
+	border-top-right-radius: 3px;
+	border-bottom-right-radius: 3px;
+    
+    
+}
+
+.book #trsf {
+    background: url('../image/bookPortada.jpg');
+    width: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    
+ object-fit: cover;
+    height: 100%;
+    background-size: 100% 100%;
+}
+ .book #threethp{
+    background: url('../image/ashni-Wh9ZC4727e4-unsplash.jpg');
+    width: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+   
+ object-fit: cover;
+    height: 100%;
+    background-size: 100% 100%;
+}
+
+.book #fourp{
+    background: url('../image/ludovica-dri-Bc_y35IwUHw-unsplash.jpeg');
+    width: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
   
-#book-section {
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
-    background-image: linear-gradient( 111.4deg,  rgba(238,113,113,1) 1%, rgba(246,215,148,1) 58% );
-    font-family: sans-serif;
-
-    
-}
-
-/* Book */
-.book {
-    position: relative;
-    width: 350px;
-    height: 500px;
-    transition: transform 0.5s;
-}
-
-.paper {
-    position: absolute;
-    width: 100%;
-    height: 100%;   
-    top: 0;
-    left: 0;
-    perspective: 1500px;
-
-}
-
-.front,
-.back {
-    background-color: white;
-    position: absolute;
-    width: 100%;
+ object-fit: cover;
     height: 100%;
-    top: 0;
-    left: 0;
-    transform-origin: left;
-    transition: transform 0.5s;
+    background-size: 100% 100%;
 }
 
-.front {
-    z-index: 1;
-    backface-visibility: hidden;
-    border-left: 3px solid powderblue;
-}
-
-.back {
-    z-index: 0;
-}
-
-.front-content,
-.back-content {
+.book #fivep{
+    background: url('../image/mattias-diesel-3M2cqBRQmjA-unsplash.jpg');
     width: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+ object-fit: cover;
     height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+    background-size: 100% 100%;
 
- img{
+}
+.book #sixp{
+    background: url('../image/logan-weaver-lgnwvr-8BNT5G4V5fI-unsplash.jpeg');
     width: 100%;
-    object-fit: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+ object-fit: cover;
     height: 100%;
+    background-size: 100% 100%;
+}
+.book #sevenp{
+    background: url('../image/mattias-diesel-3M2cqBRQmjA-unsplash.jpg');
+    width: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+ object-fit: cover;
+    height: 100%;
+    background-size: 100% 100%;
+}
+#portada{
+	background: url('../image/bookPortada.jpg');
+}
+#portada-back{
+	background: url('../image/portadaBack.jpg');
+}
+#portada, #portada-back{
+	background-size: 100% 100%;
+}
+
+/* Clases que se agregaran con Javascript */
+
+.trnsf{
+	transform: translateX(80px);
+
+}
+.trnsf-reset{
+	transform: translateX(0px);
+}
+
+/* @media para hacer el texto responsivo */
+
+@media screen and (max-width: 800px){
+	p{
+		font-size: 12px;
+	}
 }
 
 
 
-.back-content {
-    transform: rotateY(180deg)
-}
-
-/* Paper flip effect */
-.flipped .front,
-.flipped .back {
-    transform: rotateY(-180deg);
-}
-
-/* Controller Buttons */
-button {
-    border: none;
-    background-color: transparent;
-    cursor: pointer;
-    margin: 10px;
-    transition: transform 0.5s;
-}
-
-button:focus {
-    outline: none;
-}
-
-button:hover i {
-    color: #636363;
-}
-
-i {
-    font-size: 50px;
-    color: gray;
-}
-
-/* Paper stack order */
-#p1 {
-    z-index: 3;
-}
-
-#p2 {
-    z-index: 2;
-}
-
-#p3 {
-    z-index: 1;
-}
-.prev-btn i{
-    background: #636363 !important;
-    padding: 10px !important;
-}
